--- a/src/style/bulma-imports.scss
+++ b/src/style/bulma-imports.scss
@@ -6,6 +6,6 @@ $primary: #009688;
 @import 'bulma/sass/components/tabs.sass';
 @import 'bulma/sass/elements/container.sass';
 @import 'bulma/sass/elements/button.sass';
+@import 'bulma/sass/elements/box.sass';
 @import 'bulma/sass/form/_all.sass';
-@import 'bulma/sass/elements/form.sass';
 @import 'bulma-slider/src/sass/index.sass';
